--- a/iOS/playform/playform/Info.plist
+++ b/iOS/playform/playform/Info.plist
@@ -20,6 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Can't really do anything without this.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need this too. </string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>And this lol.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -31,13 +37,7 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>Can&apos;t really do anything without this.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>We need this too. </string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
